# mr-strimmer

./: .gitignore  Cargo.toml  README.md  build.py  build.sh
floatwidgets/: Cargo.toml
floatwidgets/src/widgets/: floatext.rs  floatimg.rs  floatwebcam.rs  mod.rs
floatwidgets/src/widgets/floatimg/: mod.rs  video.rs
image-rs/: .gitignore  Cargo.toml  build.rs
image-rs/src/: download.rs  image.rs  main.rs  parser.rs  video.rs
src/: main.rs
src/commands/: basic_commands.rs  chimg.rs  mod.rs  notify.rs
text-rs/: .gitignore  Cargo.toml  build.rs
text-rs/src/: main.rs
webcam-rs/: Cargo.toml
webcam-rs/src/: main.rs
