[package]
name = "mr-strimmer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
floatwidgets = { path = "./floatwidgets" }
notify-rust = "4"
serde = "1.0.158"
serenity = "0.11"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
toml = "0.7.2"