[package]
name = "image-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"

[dependencies.reqwest]
version = "0.11.14"
features = ["blocking"]

[dependencies.sdl2]
version = "0.35.2"
features = ["image"]
